--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,16 @@
-CascadedShadowMaps a SoftShadow projekty
+jak to udelat, abych mohl sdilet shader i pro cubemap? renderovat shadow do mezibufferu?
+mit v sahderu dva samplery a podle point nebo ne, vybirat, ktery se pouzije
+zkontrolovat presny nastaveni frusta
+directional - ortogonalni porjekce - asi taky muzu pouzit frustum culling, ale vlastne nedava vyznam - mit vubec tenhle pripad (nestaci point/spot)?
+spot - perspektivni projekce - vytvorit si ze svetla camera objekt a udelat normalne frustum culling?
+point - cube mapa - culling aabb na kruh
+??mohl by mi to svetlo rikat nebo ornvou plnit, zda je ten objekt ve frustu
+???mohlo by mi samo svetlo vracet projection a view matice
+??pocitat dynamicky velikost shaodw mapy? potom by slo mit buffer na max velikost, ale menit jenom viewport
+culling na svetel a objektu, ze tkerych se pocitaji stiny?
+https://www.gamedev.net/forums/topic/660519-culling-out-of-frustum-models-that-contribute-shadows/
+vyrenderuju kazde svetrlo, ktera dosahne do frusta kamery a vyrenderuju, vsechny objekty, ktere jsou v jeho dosahu
+
 ---
 SSAO
 http://www.adriancourreges.com/blog/2018/12/02/ue4-optimized-post-effects/
@@ -7,12 +19,13 @@ Screen Space Reflections
 AA
 Depth Of Field
 https://blog.selfshadow.com/publications/s2013-shading-course/karis/s2013_pbs_epic_notes_v2.pdf
-https://docs.microsoft.com/en-us/windows/desktop/dxtecharts/cascaded-shadow-maps
 http://alextardif.com/arealights.html
 https://seblagarde.files.wordpress.com/2015/07/course_notes_moving_frostbite_to_pbr_v32.pdf
 http://www.adriancourreges.com/blog/2017/12/15/mgs-v-graphics-study/
 http://martindevans.me/game-development/2015/10/09/Deferred-Transparency/
 problem bude poznat, kdy je objekt transparentni - pruhlednej material musi mit specialni flag
+
+CascadedShadowMaps projekt a https://docs.microsoft.com/cs-cz/windows/win32/dxtecharts/cascaded-shadow-maps
 
 reflection probe
 https://chetanjags.wordpress.com/2015/08/26/image-based-lighting/
