--- a/TODO.txt
+++ b/TODO.txt
@@ -1,6 +1,8 @@
+omezit mnostvi svetel co casti stiny - hlavne point lighty
+
 zda je svetlo zasahuje do camery by melo byt v camere porovnani frusta s jinym frustem (pripadne se da prevest na aabb) pro point s kouli
 
-nastavit zda je objekt shadowcaster
+nastavit zda je objekt shadowcaster - treba i automaticky podle objemu aabb
 
 ---
 Depth Of Field - http://www.adriancourreges.com/blog/2018/12/02/ue4-optimized-post-effects/
