--- a/TODO.txt
+++ b/TODO.txt
@@ -1,8 +1,8 @@
-omezit mnostvi svetel co casti stiny - hlavne point lighty
-
 zda je svetlo zasahuje do camery by melo byt v camere porovnani frusta s jinym frustem (pripadne se da prevest na aabb) pro point s kouli
-
-nastavit zda je objekt shadowcaster - treba i automaticky podle objemu aabb
+kdyz svetlo nema shadowmapu, nastavit ze neni shadow caster
+frustum udelat jako class a dat mu testSphere a testFrustum?
+cameraFromLight uz mam, ale je asi potreba popresouvat, abych to nedelal vickrat
+nejlepe presunout nekam do light CalculateOptimumShadowMapSize - zamyslet se, co patri do pipeliny a co do light
 
 ---
 Depth Of Field - http://www.adriancourreges.com/blog/2018/12/02/ue4-optimized-post-effects/
