--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,5 @@
+fixnout bug ve stinech na hranach
+
 Depth Of Field - http://www.adriancourreges.com/blog/2018/12/02/ue4-optimized-post-effects/
 SSAO
 Bloom
