--- a/TODO.txt
+++ b/TODO.txt
@@ -1,18 +1,30 @@
-addforce
 textboxy na physical properties
-nastavitelny vlastnosti u playerscript - bullets
+mel bych byt schopen vytvorit vse jak v unity
+
+AddForce nejde kvuli pozdni initializaci
+
+proc je forward axis -?
 
 po trefeni svetla zhasnout
 panaka nahradit rozbitym
-skusit udelat jednoduchy bounding mesh sceny
+zkusit udelat jednoduchy bounding mesh sceny
+https://blenderartists.org/t/creating-a-simple-collision-mesh/546298
+napr. pokud ma node dite s nazvem collider tak se pouzije jako collisionmesh
+metadata na weight?
+ty drobny objekty udelat dynamicky - treba je prirazovat ke colliderum podle jmena
 bullety jako svetla
+na kliknuti treba zapnout svetlo v objektu nebo dat silu na pozici
+udelat z cervenho svetla hopik
+chytat veci a prenaset
 
 All Awake calls
 All Start Calls
 OnMouseDown/OnMouseUp etc. events
 metody na poradi skriptu
 https://docs.unity3d.com/Manual/ExecutionOrder.html
-pohyby zpusobene fyzikou se aplikujou pred mouseDown a Update ale po OnCollision
+pohyby zpusobene fyzkou se aplikujou pred mouseDown a Update ale po OnCollision
+fixedUpate je pouze pro fyziku, napr physcs addFOrce
+pohyb jako transform.translate se dela v update
 
 =======================================================================================================================
 
@@ -21,6 +33,8 @@ SSAO
 Bloom
 Screen Space Reflections
 AA
+
+https://github.com/gszauer/GamePhysicsCookbook
 
 https://blog.selfshadow.com/publications/s2013-shading-course/karis/s2013_pbs_epic_notes_v2.pdf
 https://seblagarde.files.wordpress.com/2015/07/course_notes_moving_frostbite_to_pbr_v32.pdf
@@ -48,8 +62,6 @@ sun podle frostbite
 
 http://antongerdelan.net/opengl/raycasting.html
 
-softbody physics bullet
-
 v render queue se budou radit objekty prioritne podle vrstvy materialu, potom podle programu
 https://docs.unity3d.com/Manual/SL-SubShaderTags.html -- inspirace poradi
 
@@ -58,6 +70,8 @@ shader bude drzet lokace?
 
 doresit clonovani pres GetMaterial a GetMesh vuci loadu a unloadu z gpu - problem pri zmene dat a destrukci se to porad sdili
 mit ty data submeshe aspol. nejak zabaleny do pointeru a zbavit se jich pres reset misto ty shrink_to_fit?
+
+https://learn.unity.com/tutorial/physics-best-practices#5c7f8528edbc2a002053b5b4
 
 textura nebo mesh by si meli drzet path, aby pri loadu na gpu, kdyz maji smazany data si ho mohly naloadovat,
 ale uz na primo, zadny sdileni pres file system
@@ -75,6 +89,9 @@ https://stackoverflow.com/a/27895283
 https://www.haroldserrano.com/blog/books-i-used-to-develop-a-game-engine
 http://www.gameenginegems.net/geg1.php
 https://prideout.net/
+https://en.wikipedia.org/wiki/Collision_detection
+https://gamedev.stackexchange.com/questions/26501/how-does-a-collision-engine-work/26506#26506
+http://mmmovania.blogspot.com/2011/04/physx-basics-tutorial-simple-bouncing.html
 http://alextardif.com/Particles.html
 http://alextardif.com/eden.html
 https://github.com/NVIDIAGameWorks/WaveWorks
