--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,3 @@
-mit vice collideru nemuzu mit v objektu, ty collidery by musely byt compound v bulletu
-    collider->btRigidbody->setCcdMotionThreshold(1.0f);
-    collider->btRigidbody->setCcdSweptSphereRadius(0.2f);
-
 po trefeni svetla zhasnout
 panaka nahradit rozbitym
 zkusit udelat jednoduchy bounding mesh sceny
@@ -10,20 +6,18 @@ napr. pokud ma node dite s nazvem collider tak se pouzije jako collisionmesh
 metadata na weight?
 ty drobny objekty sceny udelat dynamicky - treba je prirazovat ke colliderum podle jmena
 bullety jako svetla
-na kliknuti treba zapnout svetlo v objektu nebo dat silu na pozici
+na kliknuti treba zapnout svetlo v objektu nebo dat silu na pozici, nebo pritahovat objekt k sobe
 udelat z cervenho svetla hopik
 chytat veci a prenaset
 cim dele drzim tlacitko tim vetsi sila
 
-All Awake calls
-All Start Calls
-OnMouseDown/OnMouseUp etc. events
-metody na poradi skriptu
-https://docs.unity3d.com/Manual/ExecutionOrder.html
-pohyby zpusobene fyzkou se aplikujou pred mouseDown a Update ale po OnCollision
-fixedUpate je pouze pro fyziku, napr physics addForce
-pohyb jako transform.translate se dela v update
+https://github.com/KhronosGroup/glTF-Blender-IO/pull/820
+https://github.com/KhronosGroup/glTF-Blender-IO/pull/812
 
+OnMouseDown/OnMouseUp etc. events
+https://docs.unity3d.com/ScriptReference/MonoBehaviour.html
+
+https://www.thoughtspike.com/friction-coefficients-for-bullet-physics/
 =======================================================================================================================
 
 Depth Of Field - http://www.adriancourreges.com/blog/2018/12/02/ue4-optimized-post-effects/
