--- a/TODO.txt
+++ b/TODO.txt
@@ -1,18 +1,20 @@
-po trefeni svetla zhasnout
+kdy se ma updatovat model amtrix vuci tem updatum pred renderem?
+
+na kliknuti treba zapnout svetlo v objektu nebo dat silu na pozici, nebo pritahovat objekt k sobe, strelit na pozici kulku
+chytat veci a prenaset
+
 panaka nahradit rozbitym
+lepsi model na bullet
+
 zkusit udelat jednoduchy bounding mesh sceny
 https://blenderartists.org/t/creating-a-simple-collision-mesh/546298
 napr. pokud ma node dite s nazvem collider tak se pouzije jako collisionmesh
 metadata na weight?
+zhecknou po exportu range - nacitat je taky z metadat?
 ty drobny objekty sceny udelat dynamicky - treba je prirazovat ke colliderum podle jmena
-na kliknuti treba zapnout svetlo v objektu nebo dat silu na pozici, nebo pritahovat objekt k sobe
-chytat veci a prenaset
 
 https://github.com/KhronosGroup/glTF-Blender-IO/pull/820
 https://github.com/KhronosGroup/glTF-Blender-IO/pull/812
-
-OnMouseDown/OnMouseUp etc. events
-https://docs.unity3d.com/ScriptReference/MonoBehaviour.html
 
 https://www.thoughtspike.com/friction-coefficients-for-bullet-physics/
 =======================================================================================================================
