add some dynamic colliders

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,4 @@
-loadovat tagy objektu z metadat? - misto parsovani object namu...
-
+marginy malych objektu?
 zkusit udelat jednoduchy bounding mesh sceny
 https://www.thoughtspike.com/friction-coefficients-for-bullet-physics/
 
